--- a/guides/assets/stylesrc/components/_code-container.scss
+++ b/guides/assets/stylesrc/components/_code-container.scss
@@ -12,7 +12,7 @@ intermediate whitespace looks uniform. */
   background-repeat: no-repeat;
   background-size: 36px 36px;
   border-radius: $base-border-radius;
-  border-width: 2px;
+  border: 2px solid $gray-500;
   min-height: calc(36px + 1.2em);
   margin: 2em auto;
   padding: 0.75em !important;
